# darp.luau.native

./: .gitignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  Directory.Build.props  README.md
.github/workflows/: build-package.yml  ci.yml  luau-bump.yml  release-please.yml
bindgen/: build.rs
bindgen/src/: generated.rs
native/: CMakeLists.txt  exports.c
native/include/: luau_exports.h
scripts/: build-native.ps1  build-native.sh  build_native.ps1  generate_bindings.ps1  update_luau_version.py
src/Darp.Luau.Native/: Darp.Luau.Native.csproj  LuauNative.g.cs  LuauNativeMethods.cs
tests/Darp.Luau.Native.IntegrationTests/: Darp.Luau.Native.IntegrationTests.csproj  Program.cs
